tests/machine/x/c/map_assign.c
// Generated by Mochi experimental C compiler
#include <stdio.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>

typedef struct { const char* key; int value; } EntrySI;

int map_get_str_int(const EntrySI* m, int n, const char* key) {
    for (int i = 0; i < n; i++) if (strcmp(m[i].key, key) == 0) return m[i].value;
    return 0;
}

int main() {
EntrySI scores[] = {{"alice", 1}};
scores["bob"] = 2;
printf("%d\n", map_get_str_int(scores, 1, "bob"));
    return 0;
}
